--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -1,13 +1,13 @@
-name: Deploy Prod
+name: Deploy PR Preview
 
 on:
-  push:
+  pull_request:
     branches:
       - main
 
 jobs:
-  deploy:
-    name: deploy-prod
+  remove:
+    name: deploy-pr-preview
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -16,18 +16,12 @@ jobs:
         with:
           node-version: 20.x
           cache: "npm"
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm ci
-      - name: Update domain settings
-        uses: mikefarah/yq@master
-        with:
-          cmd: |
-            yq -i '.stages.prod.params.customDomainName = "${{ vars.CUSTOM_DOMAIN_NAME }}"' serverless-compose.yml
-            yq -i '.stages.prod.params.customDomainCertificateARN = "${{ vars.CUSTOM_DOMAIN_CERTIFICATE_ARN }}"' serverless-compose.yml
-      - name: Serverless Deploy
+      - name: serverless deploy
         uses: serverless/github-action@v4
         with:
-          args: deploy --stage prod
+          args: deploy --stage pr-${{ github.event.pull_request.number }}
         env:
           SERVERLESS_LICENSE_KEY: ${{ secrets.SERVERLESS_LICENSE_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
