--- a/.github/workflows/pr-remove.yml
+++ b/.github/workflows/pr-remove.yml
@@ -5,6 +5,11 @@ on:
     types:
       - closed
 
+permissions:
+  id-token: write
+  contents: write
+  pull-requests: write
+
 jobs:
   remove:
     name: remove-pr-preview
